// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Gradient Component renders with rainbow gradient 1`] = `
"\x1B[38;2;255;0;0mH\x1B[38;2;204;255;0me\x1B[38;2;0;255;102ml\x1B[38;2;0;102;255ml\x1B[38;2;204;0;255mo\x1B[39m
\x1B[?25l"
`;

exports[`Gradient Component renders with custom colors 1`] = `
"\x1B[38;2;255;0;0mT\x1B[38;2;191;0;64me\x1B[38;2;128;0;128ms\x1B[38;2;64;0;191mt\x1B[39m
\x1B[?25l"
`;

exports[`Gradient Component renders with rainbow gradient 2`] = `
"\x1B[38;2;255;0;0mH\x1B[38;2;204;255;0me\x1B[38;2;0;255;102ml\x1B[38;2;0;102;255ml\x1B[38;2;204;0;255mo\x1B[39m
\x1B[?25l"
`;

exports[`Gradient Component renders with custom colors 2`] = `
"\x1B[38;2;255;0;0mT\x1B[38;2;191;0;64me\x1B[38;2;128;0;128ms\x1B[38;2;64;0;191mt\x1B[39m
\x1B[?25l"
`;

exports[`Gradient Component renders with custom colors 3`] = `
"\x1B[38;2;255;0;0mT\x1B[38;2;191;0;64me\x1B[38;2;128;0;128ms\x1B[38;2;64;0;191mt\x1B[39m
\x1B[?25l"
`;

exports[`Gradient Component renders with rainbow gradient 3`] = `
"\x1B[38;2;255;0;0mH\x1B[38;2;204;255;0me\x1B[38;2;0;255;102ml\x1B[38;2;0;102;255ml\x1B[38;2;204;0;255mo\x1B[39m
\x1B[?25l"
`;

exports[`Gradient Component renders with custom colors 4`] = `
"\x1B[38;2;255;0;0mT\x1B[38;2;191;0;64me\x1B[38;2;128;0;128ms\x1B[38;2;64;0;191mt\x1B[39m
\x1B[?25l"
`;

exports[`Gradient Component renders with rainbow gradient 4`] = `
"\x1B[38;2;255;0;0mH\x1B[38;2;204;255;0me\x1B[38;2;0;255;102ml\x1B[38;2;0;102;255ml\x1B[38;2;204;0;255mo\x1B[39m
\x1B[?25l"
`;

exports[`Gradient Component renders with custom colors 5`] = `
"\x1B[38;2;255;0;0mT\x1B[38;2;191;0;64me\x1B[38;2;128;0;128ms\x1B[38;2;64;0;191mt\x1B[39m
\x1B[?25l"
`;

exports[`Gradient Component renders with rainbow gradient 5`] = `
"\x1B[38;2;255;0;0mH\x1B[38;2;204;255;0me\x1B[38;2;0;255;102ml\x1B[38;2;0;102;255ml\x1B[38;2;204;0;255mo\x1B[39m
\x1B[?25l"
`;
